message StepValue {
	required double step = 1;
}
